taxonomy: avoid column break on multiline items #705

--- a/static/css/theme.css
+++ b/static/css/theme.css
@@ -2071,6 +2071,10 @@ html[dir="rtl"] #R-sidebar ul.collapsible-menu > li > label > i.fa-chevron-right
     }
 }
 
+.columnize > *{
+    break-inside: avoid-column;
+}
+
 .columnize .breadcrumbs{
     font-size: .859625rem;
 }
